[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
uuid = { version = "1.0", features = ["v4", "serde"] }
# thiserror = "1.0"
rkyv = { version = "0.7", features = ["validation"] }
memmap2 = "0.5"
ordered-float = "3.9"
rand = "0.8"
bit-vec = "0.6"
seahash = "4.1"
nom = "7.1"
# tracing = "0.1"

# Clustering
tokio = { version = "1", features = ["full"] }
openraft = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Network Layer
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
warp = "0.3"
tracing-subscriber = "0.3.22"

[[bin]]
name = "chronos"
path = "src/main.rs"

[[bin]]
name = "chronos-cli"
path = "src/cli.rs"

[profile.dev]
strip = true
# opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
